--- a/templates/project_info.html
+++ b/templates/project_info.html
@@ -11,10 +11,12 @@
   <p>Description: {{ description }}</p>
   <p>Max Grade: {{ max_grade }}</p>
 
+  {% if grades != [] %}
   Grades<ul>
   {% for grade in grades %}
   <li><a href="/student?github={{grade[0]}}">Student: {{ grade[0] }}</a>, Grade: {{ grade[1] }}</li>
   {% endfor %}
+  {% endif %}
 
 </body>
 </html>
